contact done, header styling done. working on about/mission pages now

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,17 @@ Thumbs.db
 .nodemonignore
 .sass-cache/
 node_modules/
-public/lib/
+public/lib/angular
+public/lib/angular-animate
+public/lib/angular-bootstrap
+public/lib/angular-file-upload
+public/lib/angular-messages
+public/lib/angular-mocks
+public/lib/angular-resource
+public/lib/angular-ui-router
+public/lib/angular-ui-utils
+public/lib/es5-shim
+public/lib/jquery
 app/tests/coverage/
 .bower-*/
 .idea/
