--- a/.gitignore
+++ b/.gitignore
@@ -10,17 +10,7 @@ Thumbs.db
 .nodemonignore
 .sass-cache/
 node_modules/
-public/lib/angular
-public/lib/angular-animate
-public/lib/angular-bootstrap
-public/lib/angular-file-upload
-public/lib/angular-messages
-public/lib/angular-mocks
-public/lib/angular-resource
-public/lib/angular-ui-router
-public/lib/angular-ui-utils
-public/lib/es5-shim
-public/lib/jquery
+public/lib/
 app/tests/coverage/
 .bower-*/
 .idea/
