--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postinstall": "bower install --config.interactive=false"
   },
   "dependencies": {
+    "aws-sdk": "2.3.0",
     "acl": "~0.4.4",
     "async": "^1.3.0",
     "body-parser": "^1.13.1",
