--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cookie-parser": "^1.3.2",
     "crypto": "0.0.3",
     "express": "^4.13.1",
+    "express-rate-limit": "^2.1.2",
     "express-session": "^1.11.3",
     "file-stream-rotator": "~0.0.6",
     "forever": "~0.14.2",
