last ignore change

--- a/.gitignore
+++ b/.gitignore
@@ -25,14 +25,14 @@ app/tests/coverage/
 .bower-*/
 .idea/
 coverage/
-config/env
+
 
 # MEAN.js app and assets
 # ======================
 public/dist/
 uploads
 modules/users/client/img/profile/uploads
-config/env/local.js
+config/env/
 *.pem
 
 # Ignoring MEAN.JS's gh-pages branch for documenation
