--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "acl": "~0.4.4",
     "async": "^1.3.0",
-    "aws-sdk": "2.x",
+    "aws-sdk": "2.3.5",
     "body-parser": "^1.13.1",
     "bower": "^1.4.1",
     "cfenv": "~1.0.0",
